re PR c++/52374 ([C++11] Fails to transform id-expression into dependent base member access in lambda expression)

PR c++/52374
	* pt.c (tsubst_qualified_id): Use current_nonlambda_class_type.

From-SVN: r196743